[Fix] Mask alpha channel from color RGB value. Tested Color.java